Fix list vertical whitespace (use margin collapse).
[Finishes #76835664]

--- a/src/oocss/list/_listWhitespace.scss
+++ b/src/oocss/list/_listWhitespace.scss
@@ -6,7 +6,7 @@
 * @requires     
 */
 
-$list-whitespace-keys: (l padding, a '', v -top -bottom, h -left -right);
+$list-whitespace-keys: (l margin, a '', v -top -bottom, h -left -right);
 @function list-expand-whitespace-key($k) {
   @each $pair in $list-whitespace-keys {
     $short: nth($pair, 1);
